tests/fsharpqa/Source/TypeProviders/RuntimeDesignTimeAssembly/Negative/env.lst
NoMT	SOURCE=MyTPDesignTimeHelper.fs    SCFLAGS=-a						# MyTPDesignTimeHelper.fs
NoMT	SOURCE=MyTPDesignTime.fs          SCFLAGS="-a -r:MyTPDesignTimeHelper.dll" 		# MyTPDesignTime.fs
NoMT	SOURCE=MyTPRuntime.fs             SCFLAGS="-a -r:MyTPDesignTime.dll" 			# MyTPRuntime.fs

NoMT	SOURCE=SplitAssembly01.fs                                       SCFLAGS=-r:MyTPRuntime.dll 	# SplitAssembly01.fs
NoMT	SOURCE=SplitAssembly02.fs PRECMD="del MyTPDesignTimeHelper.dll" SCFLAGS=-r:MyTPRuntime.dll 	# SplitAssembly02.fs
